# rosh

./: .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.nix  Cargo.toml  MOSH_BOOTSTRAP_PROCESS.md  Makefile  README.md  TODO.md  flake.nix  tests.nix
.gemini/: settings.json
.github/: README.md  dependabot.yml
.github/workflows/: ci.yml
crates/mosh_ssp/: Cargo.toml
crates/rosh/: Cargo.toml
crates/rosh-crypto/: Cargo.toml
crates/rosh-crypto/src/: cipher.rs  key_exchange.rs  lib.rs
crates/rosh-crypto/tests/: cipher_aes256_roundtrip.rs  cipher_chacha20_roundtrip.rs  error_handling_test.rs  key_derivation.rs  key_encode_decode.rs
crates/rosh-network/: Cargo.toml
crates/rosh-network/src/: cert_validation.rs  cert_validation_test.rs  connection.rs  connection_test.rs  lib.rs  protocol.rs  transport.rs  transport_test.rs
crates/rosh-network/tests/: failure_scenarios_test.rs  message_stats.rs  protocol_decoder_edges.rs  protocol_roundtrip.rs
crates/rosh-pty/: Cargo.toml
crates/rosh-pty/src/: lib.rs  pty.rs  session.rs
crates/rosh-pty/tests/: cross_platform_test.rs  error_handling_test.rs  interactive_programs_test.rs  io_handling_test.rs  process_lifecycle_test.rs  pty_basic.rs  session_test.rs  signal_handling_test.rs
crates/rosh-state/: Cargo.toml
crates/rosh-state/src/: compress.rs  diff.rs  lib.rs  predictor.rs  sync.rs
crates/rosh-state/tests/: compress_roundtrip.rs  diff_dimension_change.rs  diff_roundtrip.rs  error_handling_test.rs  integration_terminal_state_diff.rs  predictor_basic.rs
crates/rosh-terminal/: Cargo.toml
crates/rosh-terminal/src/: display.rs  emulator.rs  framebuffer.rs  lib.rs  parser.rs  state.rs
crates/rosh-terminal/tests/: error_handling_test.rs  parser_cursor_and_erase.rs  parser_sgr.rs  state_test.rs
crates/rosh-test-utils/: Cargo.toml
crates/rosh-test-utils/src/: fixtures.rs  harness.rs  lib.rs  network.rs  terminal.rs
crates/rosh-test-utils/src/fixtures/: large_text.txt
crates/rosh/src/: bootstrap.rs  client.rs  hole_punch.rs  lib.rs  server.rs  terminal_guard.rs
crates/rosh/tests/: README.md  aes256_test.rs  client_test.rs  error_handling_test.rs  integration_test.rs  server_test.rs  ssh_e2e_test.rs  ssh_integration_test.rs  ssh_unit_test.rs
crates/rosh/tests/common/: mod.rs
crates/rosh/tests/e2e/: authentication_tests.rs  basic_connection.rs  mod.rs  network_resilience.rs  performance_tests.rs  protocol_tests.rs  security_tests.rs  session_tests.rs  stress_tests.rs  terminal_emulation.rs
crates/rosh/tests/test_helpers/: mod.rs
examples/: Cargo.toml  quinn_echo_client.rs  quinn_echo_server.rs  rosh_like_server.rs
scripts/: pre-commit.sh  test-e2e.sh
