[package]
name = "quinn-test"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "echo_server"
path = "quinn_echo_server.rs"

[[bin]]
name = "echo_client"
path = "quinn_echo_client.rs"

[[bin]]
name = "rosh_like_server"
path = "rosh_like_server.rs"

[dependencies]
anyhow = "1"
quinn = "0.11"
rustls = "0.23"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rcgen = "0.13"