[package]
name = "rosh-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ring = { workspace = true }
aes-gcm = { workspace = true }
chacha20poly1305 = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
hex = "0.4"