[package]
name = "rosh-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ring = { workspace = true }
aes-gcm = { workspace = true }
chacha20poly1305 = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, optional = true }
rkyv = { workspace = true, optional = true }

[features]
default = []
clap = ["dep:clap"]
rkyv = ["dep:rkyv"]

[dev-dependencies]
hex = "0.4"
