[package]
name = "rosh-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
quinn = { workspace = true }
bytes = { workspace = true }
rkyv = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rosh-crypto = { path = "../rosh-crypto" }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rcgen = "0.13"
rand = "0.8"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "test-util"] }