[package]
name = "rosh-pty"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nix = { workspace = true }
libc = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.10"