[package]
name = "rosh-state"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rkyv = { workspace = true }
zstd = { workspace = true }
lz4_flex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rosh-terminal = { path = "../rosh-terminal" }
clap = { workspace = true, optional = true }

[features]
default = []
clap = ["dep:clap"]

[dev-dependencies]
criterion = "0.5"
