[package]
name = "rosh-test-utils"
version = "0.1.0"
edition = "2021"
description = "Test utilities for rosh e2e testing"
license = "MIT OR Apache-2.0"

[dependencies]
rosh-pty = { path = "../rosh-pty" }

tokio = { version = "1.37", features = ["full", "test-util"] }
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.10"
rand = "0.8"
async-trait = "0.1"
portpicker = "0.1"
regex = "1.10"

# Terminal testing
similar = "2.4"
strip-ansi-escapes = "0.2"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }
