[package]
name = "rosh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "rosh"
path = "src/bin/rosh.rs"

[[bin]]
name = "rosh-server"
path = "src/bin/rosh-server.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rosh-crypto = { path = "../rosh-crypto" }
rosh-network = { path = "../rosh-network" }
rosh-terminal = { path = "../rosh-terminal" }
rosh-state = { path = "../rosh-state" }
rosh-pty = { path = "../rosh-pty" }
