[package]
name = "rosh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "rosh"
path = "src/bin/rosh.rs"

[[bin]]
name = "rosh-server"
path = "src/bin/rosh-server.rs"

[dependencies]
base64 = { workspace = true }
rand = "0.8"

[dev-dependencies]
dirs = "5.0"
async-trait = "0.1"
futures = "0.3"
